exports[`padding properly applies a value when passed only one 1`] = `
Object {
  "padding-bottom": "12px",
  "padding-left": "12px",
  "padding-right": "12px",
  "padding-top": "12px",
}
`;

exports[`padding properly applies unitless values 1`] = `
Object {
  "padding-bottom": 36,
  "padding-left": 48,
  "padding-right": 24,
  "padding-top": 12,
}
`;

exports[`padding properly applies unitless zero 1`] = `
Object {
  "padding-bottom": 0,
  "padding-left": 0,
  "padding-right": 0,
  "padding-top": 0,
}
`;

exports[`padding properly applies values when passed four 1`] = `
Object {
  "padding-bottom": "36px",
  "padding-left": "48px",
  "padding-right": "24px",
  "padding-top": "12px",
}
`;

exports[`padding properly applies values when passed three 1`] = `
Object {
  "padding-bottom": "36px",
  "padding-left": "24px",
  "padding-right": "24px",
  "padding-top": "12px",
}
`;

exports[`padding properly applies values when passed two 1`] = `
Object {
  "padding-bottom": "12px",
  "padding-left": "24px",
  "padding-right": "24px",
  "padding-top": "12px",
}
`;
